<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorArrierePlan"
    tools:context=".ActivityDistance">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="135dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/textViewDistance"
        android:textAlignment="center"
        android:textColor="@color/colorTitreConversion"
        android:textSize="24dp"
        app:fontFamily="@font/alegreya_sc_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="256dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/textViewDistanceSousTitre"
        android:textAlignment="center"
        android:textColor="@color/colorSousTitreConversion"
        android:textSize="18dp"
        app:fontFamily="@font/alegreya_sc_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <RadioGroup
        android:id="@+id/radioGroupDebut2"
        android:layout_width="130dp"
        android:layout_height="204dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2">

        <RadioButton
            android:id="@+id/radioButtonCM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioCM"
            android:textColor="@color/colorRadio"
            app:fontFamily="@font/alegreya_sans_sc_bold" />

        <RadioButton
            android:id="@+id/radioButtonM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioM"
            android:textColor="@color/colorRadio"
            app:fontFamily="@font/alegreya_sans_sc_bold" />

        <RadioButton
            android:id="@+id/radioButtonKM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioKM"
            android:textColor="@color/colorRadio"
            app:fontFamily="@font/alegreya_sans_sc_bold" />

        <RadioButton
            android:id="@+id/radioButtonPOUCE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioPOUCE"
            android:textColor="@color/colorRadio"
            app:fontFamily="@font/alegreya_sans_sc_bold" />

        <RadioButton
            android:id="@+id/radioButtonPIED"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioPIED"
            android:textColor="@color/colorRadio"
            app:fontFamily="@font/alegreya_sans_sc_bold" />

        <RadioButton
            android:id="@+id/radioButtonMILE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioMILE"
            android:textColor="@color/colorRadio"
            app:fontFamily="@font/alegreya_sans_sc_bold" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroupDestin2"
        android:layout_width="130dp"
        android:layout_height="204dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2">

        <RadioButton
            android:id="@+id/radioButtonVersCM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioCM"
            android:textColor="@color/colorRadio"
            app:fontFamily="@font/alegreya_sans_sc_bold" />

        <RadioButton
            android:id="@+id/radioButtonVersM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioM"
            android:textColor="@color/colorRadio"
            app:fontFamily="@font/alegreya_sans_sc_bold" />

        <RadioButton
            android:id="@+id/radioButtonVersKM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioKM"
            android:textColor="@color/colorRadio"
            app:fontFamily="@font/alegreya_sans_sc_bold" />

        <RadioButton
            android:id="@+id/radioButtonVersPOUCE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioPOUCE"
            android:textColor="@color/colorRadio"
            app:fontFamily="@font/alegreya_sans_sc_bold" />

        <RadioButton
            android:id="@+id/radioButtonVersPIED"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioPIED"
            android:textColor="@color/colorRadio"
            app:fontFamily="@font/alegreya_sans_sc_bold" />

        <RadioButton
            android:id="@+id/radioButtonVersMILE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioMILE"
            android:textColor="@color/colorRadio"
            app:fontFamily="@font/alegreya_sans_sc_bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/texteTemporaireResultat2"
        android:layout_width="201dp"
        android:layout_height="91dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/texteTemporaireResultat"
        android:textAlignment="center"
        android:textColor="@color/colorResultat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupDestin2" />

</androidx.constraintlayout.widget.ConstraintLayout>